--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=mysql://uzkk52pxgsz4ckef:1DCn6mq4QVcq2x8kBHyh@bxrebbif5ozfjdbzntyu-mysql.services.clever-cloud.com:3306/bxrebbif5ozfjdbzntyu
-spring.datasource.username=uzkk52pxgsz4ckef
-spring.datasource.password=3ijeg19pNXiBYLr01t8m
+spring.datasource.url=mysql://uhcyiavazuy7rhrh:SYvnJHJ9DPVmwUZX8aGD@bsicxeqpl2syo67zqax5-mysql.services.clever-cloud.com:3306/bsicxeqpl2syo67zqax5
+spring.datasource.username=uhcyiavazuy7rhrh
+spring.datasource.password=SYvnJHJ9DPVmwUZX8aGD
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 server.port=10000
 
