--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=mysql://uhcyiavazuy7rhrh:SYvnJHJ9DPVmwUZX8aGD@bsicxeqpl2syo67zqax5-mysql.services.clever-cloud.com:3306/bsicxeqpl2syo67zqax5
-spring.datasource.username=uhcyiavazuy7rhrh
-spring.datasource.password=SYvnJHJ9DPVmwUZX8aGD
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-server.port=10000
+
+
+spring.datasource.url=jdbc:mysql://urrvvhqcktox97xi:WPMROhJrYNtx5t5KhMak@bfqnbzby6bewc7zilrgg-mysql.services.clever-cloud.com:3306/bfqnbzby6bewc7zilrgg
+spring.datasource.username=urrvvhqcktox97xi
+spring.datasource.password=WPMROhJrYNtx5t5KhMak
+
+#spring.datasource.url=jdbc:mysql://localhost:3307/pruebals?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 
 #JWT
 jwt.secret = secret
